--- a/emilie /Class 1/class1_exercise1.ipynb
+++ b/emilie /Class 1/class1_exercise1.ipynb
@@ -289,9 +289,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python",
-   "name": "py383"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -303,7 +303,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5 (v3.8.5:580fbb018f, Jul 20 2020, 12:11:27) \n[Clang 6.0 (clang-600.0.57)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
