--- a/Philip/Class 1/class1_exercise1.ipynb
+++ b/Philip/Class 1/class1_exercise1.ipynb
@@ -289,9 +289,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py383"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -303,7 +303,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "73d367d38892401ed2227ee085464fe14e273a216690dc621e43d408ef2f35f2"
+   }
   }
  },
  "nbformat": 4,
