--- a/Philip/Class 10/Class10.ipynb
+++ b/Philip/Class 10/Class10.ipynb
@@ -21,8 +21,8 @@
     "import pandas as pd\n",
     "import os\n",
     "from importlib import reload\n",
-    "from sklearn.ensemble import GradientBoostingClassifier as BDT_classifier\n",
-    "from sklearn.ensemble import AdaBoostClassifier as AB_classifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier as Gra_classifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier as Ada_classifier\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "plt.style.use(\"../KD_style.mplstyle\")"
