--- a/Philip/Exam 2023/Code_examples.ipynb
+++ b/Philip/Exam 2023/Code_examples.ipynb
@@ -39,11 +39,12 @@
    "source": [
     "# Usefull functions\n",
     "\n",
-    "def ullhfit(x, fitfunc, **kwargs):\n",
+    "def ullhfit(x, fitfunc, limits = None, fixed = None, **kwargs):\n",
+    "    #Written by Philip Kofoed-Djursner\n",
     "    # Unbinned log likelihood fitter\n",
     "    \n",
     "    def obt(*args):\n",
-    "        # obtimization function is taken from Troels\n",
+    "        # obtimization function is taken from Troels Petersen\n",
     "        # Empty results array\n",
     "        logf = np.zeros_like(x)\n",
     "        \n",
@@ -64,6 +65,12 @@
     "\n",
     "    ullh_Min = Minuit(obt, **kwargs, name = [*kwargs]) # Setup; obtimization function, initial valuable guesses, names of variables. \n",
     "    ullh_Min.errordef = 0.5 # needed for likelihood fits. No explaination in the documentation.\n",
+    "    if limits:\n",
+    "        for i, limit in enumerate(limits):\n",
+    "            ullh_Min.limits[i] = limit\n",
+    "    if fixed:\n",
+    "        for i, fix in enumerate(fixed):\n",
+    "            ullh_Min.fixed[i] = fix\n",
     "    ullh_Min.migrad() # Compute the fit\n",
     "    valuesfit = np.array(ullh_Min.values, dtype = np.float64) # Convert to numpy\n",
     "    errorsfit = np.array(ullh_Min.errors, dtype = np.float64) # Convert to numpy\n",
